* 在「客戶聯絡人列表」頁面新增篩選功能，可以用「職稱」欄位進行資料篩選 * 在「客戶資料列表」頁面新增篩選功能，可以用「客戶分類」欄位進行資料篩選 (下拉選單)

--- a/FirstHomeWork/FirstHomeWork.csproj
+++ b/FirstHomeWork/FirstHomeWork.csproj
@@ -259,6 +259,9 @@
     <Compile Include="Models\vw_CustomerDetailsCount.cs">
       <DependentUpon>Customer.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\客戶分類.cs">
+      <DependentUpon>Customer.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\客戶聯絡人.cs">
       <DependentUpon>Customer.tt</DependentUpon>
     </Compile>
