--- a/FirstHomeWork/Web.config
+++ b/FirstHomeWork/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="TemplateDirectory" value="App_Data/excel/Template" />
+    <add key="TempOutput" value="App_Data/excel/TempOutput" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
