--- a/FirstHomeWork/FirstHomeWork.csproj
+++ b/FirstHomeWork/FirstHomeWork.csproj
@@ -479,6 +479,7 @@
     <Content Include="Views\VT\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutBootstrap.cshtml" />
     <Content Include="Views\VT\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\ArgumentError.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\excel\Template\" />
