--- a/FirstHomeWork/Web.config
+++ b/FirstHomeWork/Web.config
@@ -20,6 +20,7 @@
     <add key="TempOutput" value="App_Data/excel/TempOutput" />
   </appSettings>
   <system.web>
+    <customErrors mode="On"></customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
